--- a/build_tools/windows/Engine.vcxproj
+++ b/build_tools/windows/Engine.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="..\..\src\opengl\GUIQuad.h" />
     <ClInclude Include="..\..\src\opengl\IBufferObject.h" />
     <ClInclude Include="..\..\src\opengl\material\IBindingValue.h" />
+    <ClInclude Include="..\..\src\opengl\material\IRenderableObject.h" />
     <ClInclude Include="..\..\src\opengl\material\Material.h" />
     <ClInclude Include="..\..\src\opengl\material\Shader.h" />
     <ClInclude Include="..\..\src\opengl\material\ShaderBinding.h" />
@@ -219,7 +220,7 @@
     <ClInclude Include="..\..\src\opengl\OpenGLInc.h" />
     <ClInclude Include="..\..\src\opengl\OpenGLUtil.h" />
     <ClInclude Include="..\..\src\opengl\RenderBufferObject.h" />
-    <ClInclude Include="..\..\src\opengl\Renderer.h" />
+    <ClInclude Include="..\..\src\opengl\RenderStateManager.h" />
     <ClInclude Include="..\..\src\opengl\SlicedGUIQuad.h" />
     <ClInclude Include="..\..\src\opengl\Texture.h" />
     <ClInclude Include="..\..\src\Precomp.h" />
@@ -285,13 +286,14 @@
     <ClCompile Include="..\..\src\opengl\geometry\Quad.cpp" />
     <ClCompile Include="..\..\src\opengl\GLObject.cpp" />
     <ClCompile Include="..\..\src\opengl\IBufferObject.cpp" />
+    <ClCompile Include="..\..\src\opengl\material\IRenderableObject.cpp" />
     <ClCompile Include="..\..\src\opengl\material\Shader.cpp" />
     <ClCompile Include="..\..\src\opengl\material\ShaderBinding.cpp" />
     <ClCompile Include="..\..\src\opengl\material\TBindingValue.cpp" />
     <ClCompile Include="..\..\src\opengl\Mesh.cpp" />
     <ClCompile Include="..\..\src\opengl\OpenGLExtensionLoader.cpp" />
     <ClCompile Include="..\..\src\opengl\RenderBufferObject.cpp" />
-    <ClCompile Include="..\..\src\opengl\Renderer.cpp" />
+    <ClCompile Include="..\..\src\opengl\RenderStateManager.cpp" />
     <ClCompile Include="..\..\src\opengl\Texture.cpp" />
     <ClCompile Include="..\..\src\Precomp.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
