--- a/build_tools/windows/Engine.vcxproj.filters
+++ b/build_tools/windows/Engine.vcxproj.filters
@@ -288,10 +288,13 @@
     <ClInclude Include="..\..\src\opengl\geometry\SlicedGUIQuad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\opengl\material\IRenderableObject.h">
+    <ClInclude Include="..\..\src\opengl\RenderStateManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\opengl\RenderStateManager.h">
+    <ClInclude Include="..\..\src\opengl\RenderObjectManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\opengl\material\IRenderObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -476,10 +479,13 @@
     <ClCompile Include="..\..\src\opengl\geometry\GridMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\opengl\material\IRenderableObject.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\opengl\RenderStateManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\RenderObjectManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\opengl\material\IRenderObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
