Linux adventures vol. 1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,29 +43,36 @@ include_directories(
 
 add_library(engine STATIC 
 
-./opengl/OpenGLExtensionLoader.cpp
+./opengl/material/ShaderBinding.cpp
+./opengl/material/TBindingValue.cpp
+./opengl/material/Shader.cpp
+./opengl/material/IRenderObject.cpp
+./opengl/material/Material.cpp
 ./opengl/IBufferObject.cpp
 ./opengl/BufferObject.cpp
+./opengl/RenderStateManager.cpp
+./opengl/Camera.cpp
 ./opengl/RenderBufferObject.cpp
-./opengl/CubeMesh.cpp
+./opengl/OpenGLExtensionLoader.cpp
 ./opengl/Mesh.cpp
 ./opengl/AABB.cpp
+./opengl/RenderObjectManager.cpp
 ./opengl/Texture.cpp
 ./opengl/GLObject.cpp
 ./opengl/FrameBufferObject.cpp
-./opengl/material/Shader.cpp
-./opengl/material/ShaderBinding.cpp
-./opengl/material/TBindingValue.cpp
-./opengl/Camera.cpp
+./opengl/geometry/CubeMesh.cpp
+./opengl/geometry/Quad.cpp
+./opengl/geometry/GridMesh.cpp
 ./utility/SimplexNoise.cpp
 ./utility/Util.cpp
 ./utility/Helpers.cpp
 ./utility/Timer.cpp
 ./utility/Logger.cpp
+./Precomp.cpp
+./core/FileSystem.cpp
 ./core/VarGroup.cpp
 ./core/Var.cpp
 ./core/VarJsonReader.cpp
-./core/FileSystem.cpp
 ./core/File.cpp
 ./gui/font_rendering/FontFamily.cpp
 ./gui/font_rendering/Font.cpp
@@ -73,6 +80,7 @@ add_library(engine STATIC
 ./gui/GUIEnvironment.cpp
 ./gui/GUIImage.cpp
 ./gui/GUICheckbox.cpp
+./gui/custom_elements/ToggleGroup.cpp
 ./gui/custom_elements/GUIColorPicker.cpp
 ./gui/GUIEditBox.cpp
 ./gui/GUISlider.cpp
@@ -82,19 +90,19 @@ add_library(engine STATIC
 ./gui/GUIWindow.cpp
 ./gui/GUIStaticText.cpp
 ./gui/GUIPane.cpp
-./application/ApplicationLauncher.cpp
-./application/SettingsManager.cpp
-./application/Window.cpp
-./application/InputHandler.cpp
 ./application/AppContext.cpp
+./application/ApplicationLauncher.cpp
+./application/Window.cpp
+./application/SettingsManager.cpp
+./application/InputHandler.cpp
 ./application/Application.cpp
-./resources/ResourceManager.cpp
-./resources/ResourceCache.cpp
 ./resources/PNGLoader.cpp
+./resources/ResourceManager.cpp
 ./resources/MeshLoader.cpp
 ./resources/Image.cpp
 ./resources/ImageLoader.cpp
 ./resources/ShaderLoader.cpp
+./resources/ResourceCache.cpp
 ./resources/TGAloader.cpp
 ./resources/IQMLoader.cpp
 ./resources/IImageLoader.cpp
