--- a/build_tools/windows/Engine.vcxproj
+++ b/build_tools/windows/Engine.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="..\..\src\core\VarJsonReader.h" />
     <ClInclude Include="..\..\src\ForwardDecl.h" />
     <ClInclude Include="..\..\src\gui\custom_elements\GUIColorPicker.h" />
+    <ClInclude Include="..\..\src\gui\custom_elements\GUIColorSwatches.h" />
     <ClInclude Include="..\..\src\gui\custom_elements\ToggleGroup.h" />
     <ClInclude Include="..\..\src\gui\font_rendering\Font.h" />
     <ClInclude Include="..\..\src\gui\font_rendering\FontFamily.h" />
@@ -264,6 +265,7 @@
     <ClCompile Include="..\..\src\core\VarGroup.cpp" />
     <ClCompile Include="..\..\src\core\VarJsonReader.cpp" />
     <ClCompile Include="..\..\src\gui\custom_elements\GUIColorPicker.cpp" />
+    <ClCompile Include="..\..\src\gui\custom_elements\GUIColorSwatches.cpp" />
     <ClCompile Include="..\..\src\gui\custom_elements\ToggleGroup.cpp" />
     <ClCompile Include="..\..\src\gui\font_rendering\Font.cpp" />
     <ClCompile Include="..\..\src\gui\font_rendering\FontFamily.cpp" />
