--- a/build_tools/windows/Engine.vcxproj.filters
+++ b/build_tools/windows/Engine.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClInclude Include="..\..\src\gui\custom_elements\GUIColorSwatches.h">
       <Filter>Header Files\GUI</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\gui\GUIContainer.h">
+      <Filter>Header Files\GUI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\application\Application.cpp">
@@ -489,6 +492,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\gui\custom_elements\GUIColorSwatches.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\gui\GUIContainer.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
   </ItemGroup>
